IngressNginxController-HTTP01/2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-ns
spec:
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: svestor/flask-session-app:v1
          ports:
            - name: app
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
