IngressNginxController-HTTP01/4-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  namespace: flask-ns
  annotations:
    cert-manager.io/cluster-issuer: http01-prod
spec:
  ingressClassName: external-nginx
  rules:
    - host: flask-app.svestor.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app
                port:
                  number: 8080
  tls:
    - hosts:
        - flask-app.svestor.link
      secretName: flask-app-svestor-link-tls
